# py-videocore6

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
benchmarks/: bench_helper.py  test_dispatch.py  test_gpu_clock.py  test_tmu_performance.py
examples/: memset.py  payload.py  pctr_gpu_clock.py  scopy.py  sgemm.py  summation.py
src/_videocore6/: __init__.py  assembler.py  driver.py  drm_v3d.py  v3d.py
src/videocore6/assembler/: __init__.py  __init__.pyi
src/videocore6/driver/: __init__.py
src/videocore6/v3d/: __init__.py
tests/: test_alu.py  test_branch.py  test_condition_codes.py  test_driver.py  test_drm.py  test_labels.py  test_parallel.py  test_qpu.py  test_sfu.py  test_signals.py  test_tmu.py  test_unifa.py  test_v3d.py
videocore6/: __init__.py  assembler.py  buffer_to_ptr.pyx  driver.py  drm_v3d.py  readwrite4.c  v3d.py
