[project]
name = "py-videocore6"
version = "0.0.0"
description = "A Python library for GPGPU programming on Raspberry Pi 4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ioctl-opt>=1.3",
    "numpy>=2.3.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
